Bug 342570 - kde4breeze copies contents of systemwide kdeglobals
Summary: kde4breeze copies contents of systemwide kdeglobals
Status: RESOLVED FIXED
Alias: None
Product: Breeze
Classification: Plasma
Component: QStyle (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR major
Target Milestone: ---
Assignee: Hugo Pereira Da Costa
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-01-06 22:25 UTC by Hrvoje Senjan
Modified: 2015-04-07 19:16 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Hrvoje Senjan 2015-01-06 22:25:46 UTC
after seeing in bug 340691 the issue is not in kconfig and testing with kconfig commit 915976c1238be811f169eab1b02f7e8dad6410e0, i have noticed that the fault lies in kde4breeze.


steps to reproduce are, as written:

have /etc/xdg/kdeglobals
with
[General]
BrowserApplication=firefox
inside;
start a plasma 5 session with a clean user,
change default browser either with kcm, or by hand in ~/.config/kdeglobals,
logout,
login -> observe the ~/.config/kdeglobals, it has both firefox and browser added by user


this *does not* happen after mentioned commit, but if i add Value=5 (iow, so upd is again valid), the users kdeglobals have written in the systemwide values

Reproducible: Always
Comment 1 Hugo Pereira Da Costa 2015-01-19 09:14:13 UTC
Git commit 591de154ea87770740afca36902f1fa576009b8c by Hugo Pereira Da Costa.
Committed on 16/01/2015 at 10:38.
Pushed by hpereiradacosta into branch 'master'.

do not install window shadow if mdi's subwindow contains a KMainWindow.
This is because KMainWindow affects event processing and make all input events captured by the MdiWindowShadow.

M  +3    -1    kstyle/breezemdiwindowshadow.cpp

http://commits.kde.org/breeze/591de154ea87770740afca36902f1fa576009b8c
Comment 2 Hugo Pereira Da Costa 2015-01-20 16:19:55 UTC
oops wrong BUG: in commit.
Reopening this one, since commit in comment #1 is completely unrelated
Comment 3 Hugo Pereira Da Costa 2015-01-21 15:29:04 UTC
Git commit dfc1a80dfb7ba99731049cbbcee4b56bb5b3fbd6 by Hugo Pereira Da Costa.
Committed on 16/01/2015 at 10:38.
Pushed by hpereiradacosta into branch 'Plasma/5.2'.

do not install window shadow if mdi's subwindow contains a KMainWindow.
This is because KMainWindow affects event processing and make all input events captured by the MdiWindowShadow.

M  +3    -1    kstyle/breezemdiwindowshadow.cpp

http://commits.kde.org/breeze/dfc1a80dfb7ba99731049cbbcee4b56bb5b3fbd6
Comment 4 Hrvoje Senjan 2015-04-07 19:16:23 UTC
Git commit 7272e6914ef9b756bbbeb132b63a4e39a79f11e9 by Hrvoje Senjan.
Committed on 07/04/2015 at 19:15.
Pushed by hrvojes into branch 'master'.

[kde4breze] Fix some KConfig usage (wrt bug 340691)

We're interested only in local/users kdeglobals in this case.

REVIEW: 123289
FIXED-IN: 5.3

M  +1    -2    misc/kde4breeze/src/main.cpp

http://commits.kde.org/breeze/7272e6914ef9b756bbbeb132b63a4e39a79f11e9