[kde4breze] Fix some KConfig usage (wrt bug 340691)

We're interested only in local/users kdeglobals in this case.

REVIEW: 123289
BUG: 342570
FIXED-IN: 5.3